tests/posts/invalid/missing-tags.markdown
Title: Missing date.

; Tags: News, Slugs, PHP

Slug: missing-date

Date: 2014-06-10

Body:

# Heading

Text.
